--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,11 @@ h1 {
   text-align: center;
   margin: 0;
 }
+@media all and (max-width: 768px) {
+  h1 {
+    font-size: 43px;
+  }
+}
 
 h2 {
   font-family: "Roboto", sans-serif;
@@ -23,6 +28,11 @@ h2 {
   font-weight: 700;
   color: #261624;
   text-align: center;
+}
+@media all and (max-width: 768px) {
+  h2 {
+    font-size: 24px;
+  }
 }
 
 p, li, a {
@@ -45,7 +55,8 @@ header {
   box-shadow: 4px 2px 4px 0px #b0a9b0;
 }
 header img {
-  max-width: 200px;
+  max-width: 150px;
+  width: 100%;
 }
 header > div {
   width: 90%;
@@ -55,7 +66,7 @@ header > div {
   align-items: center;
   margin: auto;
 }
-header section p {
+header p {
   display: none;
 }
 header i {
@@ -68,35 +79,96 @@ header .fal {
 header .fas:hover {
   cursor: pointer;
 }
+@media all and (max-width: 768px) {
+  header a {
+    width: 33%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+  }
+}
 header nav {
   width: 60%;
 }
-header ul {
+@media all and (max-width: 768px) {
+  header nav {
+    width: 33%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+  }
+}
+header nav .fa-bars {
+  font-size: 35px;
+  display: none;
+}
+@media all and (max-width: 768px) {
+  header nav .fa-bars {
+    display: block;
+  }
+}
+@media all and (max-width: 500px) {
+  header nav .fa-bars {
+    font-size: 25px;
+  }
+}
+header nav ul {
   list-style: none;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   width: 100%;
+  padding: 0;
 }
-header ul li {
+@media all and (max-width: 768px) {
+  header nav ul {
+    display: none;
+    position: absolute;
+    flex-direction: column;
+    align-items: center;
+    top: 84px;
+    background-color: #fff;
+    border: 1px solid;
+  }
+}
+header nav ul li {
   width: 34%;
   text-align: center;
   box-sizing: border-box;
   padding: 10px 0 10px 0;
 }
-header ul li a {
+@media all and (max-width: 768px) {
+  header nav ul li {
+    width: 100%;
+    border-bottom: 1px solid #66385d;
+  }
+  header nav ul li:last-child {
+    border: none;
+  }
+}
+header nav ul li a {
   font-size: 15px;
 }
-header ul li:hover {
+@media all and (max-width: 768px) {
+  header nav ul li a {
+    width: 100%;
+  }
+}
+header nav ul li:hover {
   background-color: #66385d;
   cursor: pointer;
 }
-header ul li:hover > a {
+header nav ul li:hover > a {
   color: #fff;
 }
 
 .active_item {
   border-bottom: 2px solid #261624;
+}
+@media all and (max-width: 768px) {
+  .active_item {
+    border-bottom: 1px solid #66385d;
+  }
 }
 
 main {
@@ -115,7 +187,7 @@ main {
   align-items: center;
   margin-top: 40px;
 }
-#liste section {
+#liste .product_card {
   width: 90%;
   display: flex;
   flex-direction: row;
@@ -127,30 +199,63 @@ main {
   box-shadow: 3px 3px 7px 0px #b0adb0;
   cursor: pointer;
 }
-#liste section img {
+@media all and (max-width: 768px) {
+  #liste .product_card {
+    flex-direction: column;
+    align-items: center;
+    padding: 20px 0 20px 0;
+  }
+}
+#liste .product_card img {
   max-width: 250px;
   border-radius: 5px;
 }
-#liste section div:first-child {
+#liste .product_card div:first-child {
   width: 30%;
 }
-#liste section div:last-child {
+@media all and (max-width: 768px) {
+  #liste .product_card div:first-child {
+    margin-bottom: 30px;
+    width: auto;
+  }
+}
+#liste .product_card div:last-child {
   width: 70%;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   margin-left: 20px;
 }
-#liste section h3 {
-  width: 75%;
+@media all and (max-width: 768px) {
+  #liste .product_card div:last-child {
+    margin-left: 0;
+  }
+}
+#liste .product_card h3 {
+  width: 95%;
   margin: 0 0 10px 0;
 }
-#liste section p {
-  margin: 0 0 10px 0;
+@media all and (max-width: 768px) {
+  #liste .product_card h3 {
+    text-align: center;
+  }
 }
-#liste section p.product_price {
+#liste .product_card p {
+  margin: 0 0 10px 39px;
+}
+@media all and (max-width: 768px) {
+  #liste .product_card p {
+    margin-left: 0;
+  }
+}
+#liste .product_card p.product_price {
   font-weight: 700;
   margin-bottom: 40px;
+}
+@media all and (max-width: 768px) {
+  #liste .product_card p.product_price {
+    margin-bottom: 10px;
+  }
 }
 
 .sub_title {
@@ -180,6 +285,11 @@ main {
   border-radius: 10px;
   padding: 20px;
 }
+@media all and (max-width: 768px) {
+  .conteneur {
+    width: 85%;
+  }
+}
 .conteneur #product_info {
   display: flex;
   flex-direction: column;
@@ -190,7 +300,7 @@ main {
   font-size: 25px;
 }
 .conteneur #product_info .product_image {
-  max-width: 350px;
+  max-width: 250px;
 }
 
 button {
@@ -204,7 +314,7 @@ button {
   border: none;
   color: #fff;
   font-family: "Roboto", sans-serif;
-  font-size: 20px;
+  font-size: 15px;
   font-weight: 300;
   margin-top: 30px;
   border: 1px solid #66385d;
@@ -218,6 +328,83 @@ button:hover {
   border: 1px solid #66385d;
   background-color: #fff;
   cursor: pointer;
+}
+
+#panier_content {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+}
+@media all and (max-width: 768px) {
+  #panier_content {
+    flex-direction: column;
+  }
+}
+#panier_content #table_cart {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-start;
+  width: 70%;
+  padding: 30px;
+}
+@media all and (max-width: 768px) {
+  #panier_content #table_cart {
+    width: 100%;
+    padding: 10px;
+    box-sizing: border-box;
+  }
+}
+#panier_content #table_cart .product_summary {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  border-bottom: 1px solid #66385d;
+}
+#panier_content #table_cart .product_summary > div {
+  width: 50%;
+}
+#panier_content #table_cart .product_summary > div:last-child {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+#panier_content #table_cart .product_summary img {
+  max-width: 300px;
+  width: 45%;
+}
+#panier_content #table_cart .product_summary .quantity_cursor {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  width: 50%;
+  padding: 5px;
+  border: 1px solid #66385d;
+}
+#panier_content #table_cart .product_summary .quantity_cursor div {
+  width: 30%;
+  text-align: center;
+}
+#panier_content #table_cart .product_summary .quantity_cursor div:first-child, #panier_content #table_cart .product_summary .quantity_cursor div:last-child {
+  border: 1px solid #261624;
+  cursor: pointer;
+}
+#panier_content #panier_summary {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 30px;
+}
+#panier_content #panier_summary p {
+  font-size: 20px;
+  font-weight: 700;
+}
+@media all and (max-width: 768px) {
+  #panier_content #panier_summary button:first-child {
+    display: none;
+  }
 }
 
 .formulaire {
@@ -249,6 +436,11 @@ button:hover {
   align-items: center;
   justify-content: center;
   position: relative;
+}
+@media all and (max-width: 768px) {
+  .form_show div {
+    width: 95%;
+  }
 }
 .form_show div i {
   position: absolute;
