--- a/css/style.scss
+++ b/css/style.scss
@@ -45,10 +45,16 @@ body{
 h1{
     @include font_title();
     margin: 0;
+    @media all and (max-width:768px){
+        font-size: 43px;
+    }
 }
 
 h2{
     @include sub_title();
+    @media all and (max-width:768px){
+        font-size: 24px;
+    }
 }
 
 p, li, a{
@@ -67,7 +73,8 @@ header{
     z-index: 10;
     box-shadow: 4px 2px 4px 0px rgba(176,169,176,1);
     img{
-        max-width: 200px;
+        max-width: 150px;
+        width: 100%;
     }
     > div{
         width: 90%;
@@ -77,10 +84,8 @@ header{
         align-items: center;
         margin: auto;
     }
-    section{
-        p{
-            display: none;
-        }
+    p{
+        display: none;
     }
     i{
         font-size: 20px;
@@ -94,29 +99,73 @@ header{
             cursor: pointer;
         }
     }
+    a{
+        @media all and(max-width:768px){
+            width: 33%;
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+        }
+    }
     nav{
         width: 60%;
-    }
-    ul{
-        list-style: none;
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        width: 100%;
-        li{
-            width: 34%;
-            text-align: center;
-            box-sizing: border-box;
-            padding: 10px 0 10px 0;
-            a{
-                font-size: 15px;
+        @media all and(max-width: 768px){
+            width: 33%;
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+        }
+        .fa-bars{
+            font-size: 35px;
+            display: none;
+            @media all and(max-width: 768px){
+                display: block;
             }
-            &:hover{
-                background-color: $medium_purple;
-                cursor: pointer;
+            @media all and (max-width: 500px){
+                font-size: 25px;
             }
-            &:hover > a{
-                color: #fff;
+        }
+        ul{
+            list-style: none;
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            width: 100%;
+            padding: 0;
+            @media all and (max-width:768px){
+                display: none;
+                position: absolute;
+                flex-direction: column;
+                align-items: center;
+                top: 84px;
+                background-color: #fff;
+                border: 1px solid;
+            }
+            li{
+                width: 34%;
+                text-align: center;
+                box-sizing: border-box;
+                padding: 10px 0 10px 0;
+                @media all and (max-width:768px){
+                    width: 100%;
+                    border-bottom: 1px solid $medium_purple;
+                    &:last-child{
+                        border: none;
+                    }
+                }
+                a{
+                    font-size: 15px;
+                    @media all and (max-width:768px){
+                        width: 100%;
+                    }
+                }
+                &:hover{
+                    background-color: $medium_purple;
+                    cursor: pointer;
+                }
+                &:hover > a{
+                    color: #fff;
+                }
             }
         }
     }
@@ -124,6 +173,9 @@ header{
 
 .active_item{
     border-bottom: 2px solid $dark_purple;
+    @media all and (max-width:768px){
+        border-bottom: 1px solid $medium_purple;
+    }
 }
 
 main{
@@ -141,7 +193,7 @@ main{
     flex-direction: column;
     align-items: center;
     margin-top: 40px;
-    section{
+    .product_card{
         width: 90%;
         display: flex;
         flex-direction: row;
@@ -152,6 +204,11 @@ main{
         padding: 20px;
         box-shadow: 3px 3px 7px 0px rgba(176,173,176,1);
         cursor: pointer;
+        @media all and (max-width:768px){
+            flex-direction: column;
+            align-items: center;
+            padding: 20px 0 20px 0;
+        }
         img{
             max-width: 250px;
             border-radius: 5px;
@@ -159,6 +216,10 @@ main{
         div{
             &:first-child{
                 width: 30%;
+                @media all and (max-width:768px){
+                    margin-bottom: 30px;
+                    width: auto;
+                }
             }
         }
         div{
@@ -168,17 +229,29 @@ main{
                 flex-direction: column;
                 justify-content: flex-start;
                 margin-left: 20px;
+                @media all and (max-width:768px){
+                    margin-left: 0;
+                }
             }
         }
         h3{
-            width: 75%;
+            width: 95%;
             margin: 0 0 10px 0;
+            @media all and (max-width:768px){
+                text-align: center;
+            }
         }
         p{
-            margin:0 0 10px 0;
+            margin:0 0 10px 39px;
+            @media all and (max-width:768px){
+                margin-left: 0;
+            }
             &.product_price{
                 font-weight: 700;
                 margin-bottom: 40px;
+                @media all and (max-width:768px){
+                    margin-bottom: 10px;
+                }
             }
         }
     }
@@ -210,6 +283,9 @@ main{
     border: 1px solid $medium_purple;
     border-radius: 10px;
     padding: 20px;
+    @media all and (max-width:768px){
+        width: 85%;
+    }
     #product_info{
         display: flex;
         flex-direction: column;
@@ -219,7 +295,7 @@ main{
             font-size: 25px;
         }
         .product_image{
-            max-width: 350px;
+            max-width: 250px;
         }
     }
 }
@@ -235,7 +311,7 @@ button{
     border: none;
     color: #fff;
     font-family: "Roboto", sans-serif;
-    font-size: 20px;
+    font-size: 15px;
     font-weight: 300;
     margin-top: 30px;
     border: 1px solid $medium_purple;
@@ -248,6 +324,81 @@ button{
         border: 1px solid $medium_purple;
         background-color: #fff;
         cursor: pointer;
+    }
+}
+
+#panier_content{
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    @media all and (max-width: 768px){
+        flex-direction: column;
+    }
+    #table_cart{
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: flex-start;
+        width: 70%;
+        padding: 30px;
+        @media all and (max-width: 768px){
+            width: 100%;
+            padding: 10px;
+            box-sizing: border-box;
+        }
+        .product_summary{
+            width: 100%;
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            align-items: center;
+            border-bottom: 1px solid $medium_purple;
+            >div{
+                width: 50%;
+                &:last-child{
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+                }
+            }
+            img{
+                max-width: 300px;
+                width: 45%;
+            }
+            .quantity_cursor{
+                display: flex;
+                flex-direction: row;
+                justify-content: center;
+                width: 50%;
+                padding: 5px;
+                border: 1px solid $medium_purple;
+                div{
+                    width: 30%;
+                    text-align: center;
+                    &:first-child, &:last-child{
+                        border: 1px solid $dark_purple;
+                        cursor: pointer;
+                    }
+                }
+            }
+        }
+    }
+    #panier_summary{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding-top: 30px;
+        p{
+            font-size: 20px;
+            font-weight: 700;
+        }
+        button{
+            &:first-child{
+                @media all and (max-width: 768px){
+                    display: none;
+                }
+            }
+        }
     }
 }
 
@@ -279,6 +430,9 @@ button{
         align-items: center;
         justify-content: center;
         position: relative;
+        @media all and (max-width: 768px){
+            width: 95%;
+        }
         i{
             position: absolute;
             top: 10px;
